--- a/PetAdoptMeApp/package.json
+++ b/PetAdoptMeApp/package.json
@@ -16,34 +16,44 @@
     "@firebase/app": "^0.11.5",
     "@firebase/firestore": "^4.7.11",
     "@firebase/storage": "^0.13.10",
-    "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-picker/picker": "2.11.0",
+    "@gorhom/bottom-sheet": "^5.1.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-ml-kit/image-labeling": "^1.4.1",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "base-64": "^1.0.0",
-    "expo": "~53.0.8",
+    "expo": "53.0.9",
+    "expo-av": "~15.1.4",
     "expo-blur": "~14.1.4",
+    "expo-camera": "~16.1.6",
     "expo-constants": "~17.1.6",
     "expo-file-system": "~18.1.10",
     "expo-font": "~13.3.1",
+    "expo-gl": "^15.1.5",
+    "expo-gl-cpp": "^11.4.0",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
     "expo-image-picker": "~16.1.4",
-    "expo-linking": "~7.1.4",
+    "expo-linking": "~7.1.5",
     "expo-router": "~5.0.6",
     "expo-secure-store": "^14.2.3",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
+    "expo-three": "^8.0.0",
     "expo-web-browser": "~14.1.6",
     "firebase": "^11.6.1",
+    "openai": "^4.103.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-image-viewing": "^0.2.2",
+    "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-web": "~0.20.0",
